Modified ChangeLog. Add Eric Jeschke to the team of tutorial authors and I
Modified ChangeLog.
Add Eric Jeschke to the team of tutorial authors and I also tried to change the list to be more human readable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-10 scizzo <scizzo@gimp.org>
+
+        * team.html: Add Eric Jeschke to the team of tutorial authors
+        and I also tried to change the list to be more human readable.
+
 2002-11-10 brix <brix@gimp.org>
 
 	* books/index.html: added more descriptions and website links
