tutorials/index.html, put the basic tutorial first in the list

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-10 carol <carol@gimp.org>
+
+        * tutorials/index.html, put the basic tutorial first in the list
+
 2002-11-10 scizzo <scizzo@gimp.org>
 
         * team.html: Add Eric Jeschke to the team of tutorial authors
