Modified ChangeLog. Forgot one image (weird mistake).
Modified ChangeLog.
Forgot one image (weird mistake).

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
         * tutorials/index.html: Add the Photo To Sketch tutorial.
 
         * tutorials/Photo_To_Sketch/: Made the first port of the
-        Photo To Sketch tutorial.
+        Photo To Sketch tutorial. Forgot one image (weird mistake).
 
 2002-11-10 carol <carol@gimp.org>
 
