Modified ChangeLog. Add Dave Neary to the tutorial authors list.
Modified ChangeLog.
Add Dave Neary to the tutorial authors list.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-11-12 scizzo <scizzo@gimp.org>
 
+        * team.html: Add Dave Neary to the tutorial author list.
+
         * tutorials/index.html: Add the Photo To Sketch tutorial.
 
         * tutorials/Photo_To_Sketch/: Made the first port of the
