Modified ChangeLog. Add more help to the step 4 in photo to sketch
Modified ChangeLog.
Add more help to the step 4 in photo to sketch tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-13 scizzo <scizzo@gimp.org>
+
+        * tutorials/Photo_To_Sketch: Add more help to the step 4 in
+        photo to sketch tutorial.
+
 2002-11-12 scizzo <scizzo@gimp.org>
 
         * team.html: Add Dave Neary to the tutorial author list.
