--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2002-11-13 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_To_Sketch: Add more help to the step 4 in
-        photo to sketch tutorial.
+        photo to sketch tutorial. Fixed a spelling in photo to sketch.
 
 2002-11-12 scizzo <scizzo@gimp.org>
 
