Modified ChangeLog. Add the filter paths and the filter class. Also fixed
Modified ChangeLog.
Add the filter paths and the filter class. Also fixed some of the tutorials text (e-mailed from author).

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
         * tutorials/Photo_To_Sketch: Add more help to the step 4 in
         photo to sketch tutorial. Fixed a spelling in photo to sketch.
+        Add the filter paths and the filter class. Also fixed some of the
+        tutorials text (e-mailed from author).
 
 2002-11-12 scizzo <scizzo@gimp.org>
 
