Modified ChangeLog. Changed the / to -> and also fixed the paths for the
Modified ChangeLog.
Changed the / to -> and also fixed the paths for the filters.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-11-13 scizzo <scizzo@gimp.org>
 
+        * README.tutorials: Add that we should use -> in the filter
+        paths to make it easier for users to follow them.
+
+        * tutorials/Anti-Aliased_Treshold/: Changed the / to -> and also
+        fixed the paths for the filters.
+
         * tutorials/Photo_To_Sketch: Add more help to the step 4 in
         photo to sketch tutorial. Fixed a spelling in photo to sketch.
         Add the filter paths and the filter class. Also fixed some of the
