added missing descriptions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-14 brix <brix@gimp.org>
+
+	* books/index.html: added missing descriptions
+
 2002-11-14 scizzo <scizzo@gimp.org>
 
         * tutorials/index.html: Removed the Python Docbook (going to
